[package]
name = "xerocole"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
license = "MIT"

[dependencies]
env_logger = "0.6"
futures = "0.1"
futures-mpmc = { path = "../futures-mpmc" }
glob = "0.2"
icecream = "0.1"
lazy_static = "1.1.0"
libc = "0.2"
log = "0.4"
memchr = "2.0"
num_cpus = "*"
onig = "4.1"
stream-cancel = "0.4"
tokio = "0.1"
tokio-threadpool = "0.1"