[package]
name = "xerocole"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
license = "MIT"
edition = "2018"

[dependencies]
backtrace = "0.3"
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0"
futures = "0.1"
futures-mpmc = "0.1"
futures-retry = "0.3"
glob = "0.2"
gzip-header = "0.2"
humantime = "1.2"
if_chain = "0.1"
itertools = "0.8"
lazy_static = "1.1"
libc = "0.2"
log = "0.4"
memchr = "2.0"
num_cpus = "*"
parking_lot = "0.7"
regex = "1.1"
stream-cancel = "0.4"
tokio = "0.1"
tokio-threadpool = "0.1"